# dh-freesound-crossmodal-search

./: .gitignore  embeddings.pth  embeddings_clotho.pth  enter_audio_from_s3to_db.ipynb  enter_audio_from_s3to_db.py  fg_bg.db  generated_descriptions.csv  generated_descriptions_1.csv  generated_descriptions_2.csv  generated_descriptions_3.csv  generated_descriptions_4.csv  generated_descriptions_func_call.csv  insert_to_google_sheets.ipynb  openai_function_calling.ipynb  pyproject.toml  rename_audio_files.ipynb  results.csv  results_fgbg.csv  results_fgbg_sam.csv  results_sam.csv
.streamlit/: config.toml
config/model/: default.yaml
crossmodal_alignment/: retrieval_model.py
retrieval_interface/: streamlit_app.py
scripts/: clohto_fgbg.csv  fg_bg_custom_data.db  output.ipynb  plot.html  read_generated_captions_to_csvcolumn.ipynb  reference excel.xlsx  retreival_metrics.txt  single_column_fgbg_captions.csv  textdescriptions_cluster.ipynb  user_evaluation_correlation.ipynb
wandb/: latest-run
wandb/run-20230617_221509-ad1w9m7x/: run-ad1w9m7x.wandb
wandb/run-20230617_221509-ad1w9m7x/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20230619_004916-13r6sr2l/: run-13r6sr2l.wandb
wandb/run-20230619_004916-13r6sr2l/files/: config.yaml  requirements.txt  wandb-metadata.json
