[tool.poetry]
name = "freesound-crossmodal-search"
version = "0.1.0"
description = "Find sounds in Freesound with a text-to-audio retrieval system"
authors = ["Benno Weck <benno.weck01@estudiant.upf.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "crossmodal_alignment"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.1"
pytorch-metric-learning = "^1.6.3"
pytorch-lightning = "^1.9.0"
torchtext = "^0.14.1"
torchaudio = "<2"
transformers = "^4.28.1"
nltk = "^3.8.1"
plotly = "^5.15.0"
matplotlib = "^3.7.1"
spacy = "^3.1.0"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.1.0/en_core_web_sm-3.1.0.tar.gz"}
altair = "^5.0.1"
openai = "^0.27.8"
nbformat = "^5.9.2"
python-decouple = "^3.8"
boto3 = "^1.28.20"
smart-open = "^6.3.0"
python-dotenv = "^1.0.0"



[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
tensorboard = "^2.11.2"
jsonargparse = {extras = ["signatures"], version = "^4.19.0"}


[tool.poetry.group.interface.dependencies]
streamlit = "^1.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
